# IntroductionToDataEngineering

./: README.md
Part2/: docker-compose.yml  first_example.py  pyproject.toml  second_example.py
Part3/: Dockerfile.first_example  Dockerfile.second_example  docker-compose-first.yml  docker-compose-second.yml  pyproject.toml  second_example.py  third_example.py
Part4/: 1_create_topic_setup_producer.py  2_create_consumer_plus_land.py  3_produce_data.py  4_consume_json.py  5_produce_interesting_data.py  6_save_json.py  7_produce_lots_of_interesting_data.py  docker-compose.yml  pyproject.toml
Part5/: 1_generate_fake_data.py  2_query_uses_duckdb.py  3_laying_data_out_differently.py  pyproject.toml
